# tauri-mobile-sqlite

./: package.json  pnpm-lock.yaml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  lib.rs
